<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="500dp"
    android:layout_height="500dp"
    android:layout_gravity="center_horizontal"
    tools:context="jp.okiislandsh.oki.schedule.ui.guide.MapScale2OkiView">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/map_scale2_oki" />

    <FrameLayout
        android:id="@+id/eventAreaSea"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/containerLabels"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="10dp"
            android:text="@string/map_title_scale2_oki"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textChibu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="350dp"
            android:gravity="left|center_vertical"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/map_label_scale2_chibu"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textNishinoshima"
            android:layout_width="190dp"
            android:layout_height="120dp"
            android:layout_marginTop="230dp"
            android:gravity="top|left"
            android:paddingEnd="40dp"
            android:text="@string/map_label_scale2_nishinoshima"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textAma"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="230dp"
            android:gravity="left|center_vertical"
            android:paddingStart="40dp"
            android:text="@string/map_label_scale2_ama"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textDogo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="80dp"
            android:gravity="clip_horizontal|top"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:paddingEnd="20dp"
            android:text="@string/map_label_scale2_dogo"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

    </FrameLayout>

</FrameLayout>
