<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMap"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@color/colorWhite"
            android:includeFontPadding="false"
            android:padding="2dp"
            android:text="@string/button_map"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="9sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuideOkikisen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@color/colorWhite"
            android:includeFontPadding="false"
            android:padding="2dp"
            android:text="@string/button_guide_okikisen"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="9sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuideNaikousen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="@color/colorWhite"
            android:includeFontPadding="false"
            android:padding="2dp"
            android:text="@string/button_guide_naikousen"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:autoSizeMaxTextSize="14sp"
            app:autoSizeMinTextSize="9sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>